<resources>
    <string name="app_name">取号啦</string>
    <string name="action_settings">Settings</string>
    <string name="text_no_network">网络未连接，请连接网络</string>
    <string name="text_timeout_error">链接超时，请稍后重试\u2026</string>
    <string name="text_error_net">网络链接错误，请稍后重试\u2026</string>
    <string name="btn_ok">确&#160;&#160;&#160;定</string>
    <string name="btn_back">返&#160;回</string>
    <string name="btn_calcel_1_space">取&#160;消</string>
    <string name="null_2_space">&#160;&#160;</string>
    <string name="commit">提&#160;&#160;&#160;交</string>
    <string name="delete">删除</string>
    <string name="confirm_delete">确认删除</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="search_merchants">搜索</string>
    <string name="kuaisutongdao">快速通道</string>
    <string name="meishifenlei">美食分类</string>
    <string name="dingwei">定位</string>
    <string name="no_categorys_for_city">亲，此城市尚未开通,或检查下网络状态。</string>
    <string name="search_title">搜&#160;索</string>
    <string name="search_placeholder">请输入关键字</string>
    <string name="startup">排队不用等</string>
	<string name="imageDesc">图片描述</string>
	<string name="no_tags">暂无推荐</string>
	<string name="no_desc">暂无描述</string>
	<string name="get_reservation">取&#160;&#160;&#160;号</string>
	<string name="open_service">希望开通</string>
	<string name="login">登陆</string>
	<string name="renjun">人均￥</string>
	<string name="zero">0</string>
	<string name="xingjiabi">性价比:</string>
	<string name="kouwei">口味:</string>
	<string name="kouwei_4_space">口&#160;&#160;&#160;&#160;味:</string>
	<string name="huanjing">环境:</string>
	<string name="huanjing_4_space">环&#160;&#160;&#160;&#160;境:</string>
	<string name="fuwu">服务:</string>
	<string name="fuwu_4_space">服&#160;&#160;&#160;&#160;务:</string>
	<string name="zongtipingjia">总体评价:</string>
	<string name="quhaoqingkuang">取号情况:</string>
	<string name="wodequhaoqingkuang">我的取号情况</string>
	<string name="search_merchant">搜索 - 美食</string>
	<string name="loading">载入中&#8230;</string>
	<string name="merchant_description">商户描述:</string>
	<string name="comment">网友点评:</string>
	<string name="opentime">营业时间:</string>
	<string name="contact">联系方式:</string>
	<string name="dianhua">联系方式:</string>
	<string name="address">地址:</string>
	<string name="merchant_info">商家信息</string>
	<string name="attention">关&#160;&#160;&#160;注</string>
	<string name="pay_attention">+关注</string>
	<string name="cancel_attention">取消关注</string>
	<string name="paidui_condition">排队情况</string>
	<string name="no_description">暂无描述</string>
	<string name="distance">距离你</string>
	<string name="no_youhui_info">暂无优惠信息</string>
	<string name="check_youhui_list_info">查看优惠信息</string>
	<string name="youhui_list_info">优惠信息</string>
	<string name="chat_chat">聊聊天</string>
    <string name="dazhongdianping">大众点评：</string>
	<string name="empty" />
	<string name="deleting">清空中请稍后&#8230;</string>
	<string name="connecting">连接中&#8230;</string>
	<string name="network_error_info">网络连接失败，请检查网络设置！</string>
	<string name="logining">登录中&#8230;</string>
	<string name="net_error">网络异常，请重试!</string>
	<string name="querying">正努力帮您加载美味信息&#8230;</string>
	<string name="waitting">请稍等 &#8230; &#8230;</string>
	<string name="waitting_for_commit">请稍等,正在提交您的意愿 &#8230;</string>
	<string name="committing_failed">亲，对不起，提交失败，请稍候提交！</string>
	<string name="committing_success">亲，提交成功，请静候佳音！</string>
	<string name="radioPhone">手机:</string>
	<string name="radioPassword">密码:</string>
	<string name="radioEmail">邮箱</string>
	<string name="warning">警告</string>
	<string name="email_warning">无效邮件地址</string>
	<string name="pass_warning">无效密码</string>
	<string name="quhao_states_merchantName">商家名称 ：</string>
	<string name="quhao_states_merchantAddress">商家地址 ：</string>
	<string name="cancel_sequence">取消</string>
	<string name="quhao_states_comment">点评</string>
	<string name="gerenzhongxin">我&#160;的</string>
	<string name="gerenxinxi">个人信息</string>
	<string name="avatar">您的优雅头像</string>
	<string name="noname">无名人士</string>
	<string name="nomobile">无号码</string>
	<string name="jifen_label">剩余积分</string>
	<string name="jifen_label_colon">剩余积分：</string>
	<string name="jifen_default">0</string>
	<string name="label_qiandao">签到</string>
	<string name="value_qiandao">0</string>
	<string name="label_dianpin">点评</string>
	<string name="value_dianpin">0</string>
	<string name="label_zhaopian">照片</string>
	<string name="value_zhaopian">0</string>
	<string name="person_current_paidui_icon">当前取号情况</string>
	<string name="person_history_paidui_icon">历史取号情况</string>
	<string name="current_paidui">当前取号情况</string>
	<string name="history_paidui">历史取号情况</string>
	<string name="history_jifen">积分消费情况</string>
	<string name="sign_in_success">签到成功</string>
	<string name="photo">头像</string>
	<string name="nick_name">昵称</string>
	<string name="nick_name_colon">昵称:</string>
	<string name="usual_city">常住地</string>
	<string name="phone_number">手机号</string>
	<string name="current_jifen">现有积分:</string>
	<string name="jifen_layout_menul">积分说明</string>
	<string name="update_password">修改密码</string>
	<string name="current_password">当前密码</string>
	<string name="exit_login">退出当前帐号</string>
	<string name="input_nickname">请填写昵称</string>
	<string name="nickname_cannot_null">请填写昵称</string>
	<string name="nickname_update_failed">亲，网络原因，昵称更新失败！</string>
	<string name="no_register_tip">还没账号？马上</string>
	<string name="link_register">注册</string>
	<string name="phone_number_label">手机号码</string>
	<string name="verify_code_label">验证码</string>
	<string name="password_label">密码</string>
	<string name="password2_label">确认密码</string>
	<string name="menu_category_list">主页</string>
	<string name="menu_nearby_merchant">周边美食</string>
	<string name="menu_person_center">我的</string>
	<string name="menu_more">更多</string>
	<string name="get_number">取号</string>
	<string name="seat_number">座位人数：</string>
	<string name="current_number">当前号码：</string>
	<string name="next_number">下一号码：</string>
	<string name="my_number">我的号码：</string>
	<string name="before_you">在你前面：</string>
	<string name="nahao">拿&#160;&#160;&#160;号</string>
	<string name="nahao_success_tip_5_less">恭喜，取号成功，在你前面排队的不多于5桌，为了避免排队号码过期，请抓紧时间前往商家。</string>
	<string name="nahao_success_tip_5_more">恭喜：取号成功，当你的排号前还剩5位时，我们会用短信通知到你，继续享受你的免排队时间吧。</string>
	<string name="jifen_cost">积分消费情况</string>
	<string name="jifen_cost_merchant_name">所在消费商家：</string>
	<string name="jifen_cost_merchant_address">所在消费地址：</string>
	<string name="jifen_cost_action">积分消费动作：</string>
	<string name="jifen_cost_description">积分消费描述：</string>
	<string name="more">更&#160;多</string>
	<string name="more_setting">系统设置</string>
	<string name="more_new_version">检查更新</string>
	<string name="more_opinion">意见反馈</string>
	<string name="more_share">分享推荐</string>
	<string name="more_aboutus">关于我们</string>
	<string name="more_help">使用帮助</string>
	<string name="share">分&#160;&#160;&#160;享</string>
	<string name="share_success">分享成功</string>
	<string name="share_error">分享失败</string>
	<string name="share_cancel">分享取消</string>
	<string name="more_setting_cleanpicture">清除本地缓存图片</string>
    <string name="more_setting_cleancache">清除本地缓存数据</string>
    <string name="more_setting_showimage">是否显示图片</string>
    <string name="sys_option">无图浏览可以节省流量.</string>
    <string name="more_company_intro">聪明的排队让生活更有效率！</string>
    <string name="more_versioncode">软件版本</string>
    <string name="super_detail_service_phone">客服电话</string>
    <string name="more_weibo">官方微博</string>
    <string name="more_weibo_value">\@取号啦</string>
    <string name="more_web_location">网\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020址</string>
    <string name="more_domain">http://www.quhao.la</string>
    <string name="more_option_hint">留下您的宝贵意见，我们将持续改进产品（最多不能超过200汉字）</string>
    <string name="more_option_phone_hint">手机号码或邮箱地址(选填)</string>
    <string name="committing">正在提交中&#8230;&#8230;&#8230;</string>
    <string name="more_logout">注销</string>
    <string name="more_no_login">登录</string>
    <string name="login_3space">登录</string>
    <string name="register_3space">注册</string>
    <string-array name="share_title">
        <item>新浪微博</item>
        <item>QQ</item>
        <item>微信</item>
        <item>朋友圈</item>
        <item>邮件</item>
        <item>短信</item>
    </string-array>
	<string name="no_result_4_credit_cost">亲，您当前还没有消费记录哦。</string>
	<string name="no_result_4_quhao_current">亲，您当前还没取过号哦。</string>
	<string name="delete_success">删除成功</string>
	<string name="delete_failed">网络问题，删除失败</string>
	<string name="no_result_4_quhao_history">亲，您一次还没取过号哦。</string>
	<string name="no_result_4_my_attention">亲，你还没有关注过商家哦。</string>
	<string name="quhao">取号</string>
	<string name="city_list">城市列表</string>
	<string name="city_search_hint">请输入城市名或首字母查询</string>
	<string name="city_cannot_locate">无法定位当前城市,请稍候再试</string>
    <string name="menu_settings">Settings</string>
    <string name="no_data">没有找到符合条件</string>
	<string name="no_result_found">抱歉，亲， 暂无数据。</string>
	<string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
	<string name="no_queue_merchant_list_title">不用排队商家</string>
	<string name="no_result">亲，没有查询结果哦。</string>
	<string name="re_location">重新定位</string>
	<string name="location_failed">亲，定位失败，请检查网络设置或者重新定位。</string>
	<string name="guide_route">导航</string>
	<string name="no_result_4_chat_room">亲，至少要取个号才能聊天哦。</string>
	<string name="quhao_paidui">取号排队</string>
	<string name="comment_desc_hint">亲，留下您的宝贵评论吧!（最多不能超过200汉字）</string>
	<string name="my_number_title">我的号码</string>
	<string name="share_list_title">分享列表</string>
	<string name="viewpager_indicator">%1$d/%2$d</string>
</resources>