<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    <!-- title -->

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/common_top_bar_bg_blue"
        android:gravity="center_vertical"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" 
        android:paddingLeft="5dip"
        android:paddingRight="5dip">
        <Button
            android:id="@+id/back_btn"
            android:layout_width="60dip"
            android:layout_height="35dip"
            android:text="@string/btn_back"
            android:background="@drawable/btn_back_background"
            android:gravity="center|center_vertical"
            android:textColor="#ff000000"
            android:textSize="14.0sp"  />
		<TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gerenxinxi"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ff000000" />
		<Button
		    android:id="@+id/submit"
		    android:layout_width="wrap_content"
		    android:layout_height="35dip"
		    android:background="@drawable/btn_weight"
		    android:text="@string/commit"
		    android:layout_gravity="right|center_vertical"
		    android:textAppearance="?android:textAppearanceMediumInverse"
		    android:textColor="#ff000000"
		    android:textSize="14.0sp" />

    </FrameLayout>
    <!-- title -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="vertical" >

        <!-- current/history quhao, history jifen -->
        <LinearLayout android:id="@+id/nick_name_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_border"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10.0dip" >

            <TextView
                android:layout_width="0.0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6.0dip"
                android:layout_weight="1.0"
                android:maxLines="2"
                android:paddingRight="6.0dip"
                android:text="@string/nick_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ff000000"
                android:textSize="16.0sp" />

            <EditText android:id="@+id/nick_name" 
                android:layout_width="180dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:duplicateParentState="true"
                android:paddingRight="6.0dip"
                android:hint="@string/input_nickname"
                android:text="@string/empty"/>
            
        </LinearLayout>

    </LinearLayout>

</LinearLayout>