<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuBar"
    android:layout_width="match_parent"
    android:layout_height="55.0dip"
    android:layout_gravity="bottom"
    android:background="@drawable/background_line"
    android:gravity="center_vertical"
    android:orientation="horizontal" 
    >

    <Button
        android:id="@+id/btnMerchantList"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/menu_home"
        android:paddingTop="5.0dip"
        android:text="@string/menu_category_list"
        android:textColor="@layout/menu_text_color"
        android:textSize="10.0sp" />

    <Button
        android:id="@+id/btnNearby"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/menu_nearby"
        android:paddingTop="5.0dip"
        android:text="@string/menu_nearby_merchant"
        android:textColor="@layout/menu_text_color"
        android:textSize="10.0sp" />

    <Button
        android:id="@+id/btnPerson"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/menu_person_center"
        android:paddingTop="5.0dip"
        android:text="@string/menu_person_center"
        android:textColor="@layout/menu_text_color"
        android:textSize="10.0sp" />

    <Button
        android:id="@+id/btnMore"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:drawableTop="@drawable/menu_more"
        android:paddingTop="5.0dip"
        android:text="@string/menu_more"
        android:textColor="@layout/menu_text_color"
        android:textSize="10.0sp" />

</LinearLayout>