<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_border"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <!-- 积分消费所在商家 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="4.0dip"
            android:paddingLeft="10.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jifen_cost_merchant_name"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/merchantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:paddingLeft="8dip"
                android:textColor="#ff000000" />
        </LinearLayout>
        <!-- 积分消费所在商家 -->


        <!-- 积分消费地址 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="4.0dip"
            android:paddingLeft="10.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jifen_cost_merchant_address"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/merchantAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dip"
                android:text="@string/empty"
                android:textColor="#ff000000" />
        </LinearLayout>
        <!-- 积分消费地址 -->


        <!-- 积分消费动作 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10.0dip"
            android:paddingTop="4.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jifen_cost_action"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dip"
                android:text="@string/empty"
                android:textColor="#ff000000" />
        </LinearLayout>
        <!-- 积分消费动作 -->


        <!-- 积分消费详细描述 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10.0dip"
            android:paddingTop="4.0dip" >
			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jifen_cost_description"
                android:textColor="#ff000000" />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:paddingLeft="8dip"
                android:textColor="#ff000000" />
        </LinearLayout>
        <!-- 积分消费详细描述 -->
    </LinearLayout>

</LinearLayout>