<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#ffffffff"
  xmlns:android="http://schemas.android.com/apk/res/android">
   
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/common_top_bar_bg_blue3"
        android:gravity="center_vertical"
        android:paddingBottom="5dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip" >

        <LinearLayout android:id="@+id/back_btn_layout"
	        android:layout_width="50dp"
	        android:layout_centerVertical="true"
	        android:layout_height="fill_parent"
	        android:gravity="center">
	        <Button android:id="@+id/back_btn"
	            android:layout_width="40dp"
	            android:layout_height="40dp"
	            android:background="@drawable/arrow_left"
	            android:gravity="center"
	            android:textColor="#ff000000"
	            android:textSize="18.0sp"  />
		</LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/more_opinion"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>
	<ScrollView android:layout_width="fill_parent" android:layout_height="0dip" android:fillViewport="true" android:layout_weight="1.0">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#ffffffff"
	    android:gravity="center_horizontal"
	    android:padding="5dip"
	    android:orientation="vertical" >
		<View android:layout_width="0dip" android:layout_height="0dip" android:focusable="true" android:focusableInTouchMode="true" />
		<EditText
		    android:id="@+id/opinion_edit"
		    android:layout_width="fill_parent"
		    android:layout_height="200dp"
		    android:background="@drawable/update_password_input"
		    android:gravity="top"
		    android:hint="@string/more_option_hint"
		    android:focusable="true"
		    android:focusableInTouchMode="true"
		    android:textSize="14.0sp" />

		<EditText
		    android:id="@+id/opinion_edit_contact"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dip"
		    android:singleLine="true"
		    android:background="@drawable/update_password_input"
		    android:hint="@string/more_option_phone_hint"
		    android:textSize="14.0sp" >

		</EditText>
		
		<Button
            android:id="@+id/btn_opinion"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_vertical"
            android:background="@drawable/btn_background_red"
            android:text="@string/commit"
            android:textAppearance="?android:textAppearanceMediumInverse"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
	</LinearLayout>
	</ScrollView>
</LinearLayout> 