<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <!-- Merchant List page's title, eg, 本帮菜【共1000家】 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_top_bar_bg_blue"
        android:gravity="center_vertical"
        android:paddingBottom="5dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip" >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="60dip"
            android:layout_height="35dip"
            android:text="@string/btn_calcel_1_space"
            android:background="@drawable/btn_back_background"
            android:gravity="center|center_vertical"
            android:textColor="#ff000000"
            android:textSize="14.0sp"  />

        <TextView
            android:id="@+id/categoryTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/city_list"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ff000000" />

    </RelativeLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:gravity="center"
        android:orientation="vertical">
        
        <View android:layout_width="0dip" android:layout_height="0dip" android:focusable="true" android:focusableInTouchMode="true" />
        <RelativeLayout android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:gravity="center"
	        android:orientation="horizontal">
	        <Button
	            android:id="@+id/search_btn"
	            android:layout_alignParentRight="true"
	            android:layout_width="60dip"
	            android:layout_height="30dip"
	            android:text="@string/btn_calcel_1_space"
	            android:background="@drawable/btn_weight"
	            android:textColor="#ff000000"
	            android:textSize="14.0sp" />
	        <EditText android:id="@+id/search_edit"
	            android:layout_toLeftOf="@id/search_btn"
	            android:layout_width="match_parent"
	            android:layout_height="35dip"
	            android:padding="5dip"
	            android:hint="@string/city_search_hint"
	            android:textSize="10.0sp"
	            android:gravity="center"
	            />
	        
        </RelativeLayout>
        <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:orientation="vertical">
	        <TextView  android:id="@+id/locate_message"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="5dip"
	            android:text="@string/city_cannot_locate"
	            android:textSize="12.0sp"
	            android:gravity="left"
	            />
        </LinearLayout>
    </LinearLayout>
    
	<FrameLayout
	    android:id="@+id/citySearchLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#ffffff" >

	    <ListView
            android:id="@+id/citySearchListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </FrameLayout>

</LinearLayout>