<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
 	android:gravity="center_vertical" 
 	android:orientation="vertical" 
 	android:layout_width="fill_parent" 
 	android:layout_height="wrap_content"
 	android:background="@drawable/list_item"
 	android:clickable="true"
	>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_weight="1"
		    android:gravity="left|center_vertical">
		    <TextView 
		  		android:textAppearance="?android:textAppearanceMedium" 
		  		android:textSize="10.0sp" 
		  		android:textColor="@color/deep_gray" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingLeft="5.0dip"
				android:layout_gravity="left|center_vertical"
				android:lineSpacingMultiplier="1.3" 
				android:text="@string/my_number"
				/>
		  	<TextView android:id="@+id/myNumberReservation"
		  		android:textAppearance="?android:textAppearanceMedium" 
		  		android:textSize="10.0sp" 
		  		android:textColor="@color/deep_gray" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_gravity="left|center_vertical"
				android:lineSpacingMultiplier="1.3" 
				android:text="1"
				/>
	  	</LinearLayout>
	  	<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_weight="1">
			<TextView 
		  		android:textAppearance="?android:textAppearanceMedium" 
		  		android:textSize="10.0sp" 
		  		android:textColor="@color/deep_gray" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_marginTop="3.0dip" 
				android:lineSpacingMultiplier="1.3" 
				android:text="@string/seat_number"
				/>
		  	<TextView android:id="@+id/seatNoReservation"
		  		android:textAppearance="?android:textAppearanceMedium" 
		  		android:textSize="10.0sp" 
		  		android:textColor="@color/deep_gray" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_gravity="left|center_vertical"
				android:lineSpacingMultiplier="1.3" 
				android:text="1"
				/>
	  	</LinearLayout>
  	</LinearLayout>
  	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	  	<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_weight="1">
		  	<TextView 
		  		android:textAppearance="?android:textAppearanceMedium" 
		  		android:textSize="10.0sp" 
		  		android:textColor="@color/deep_gray" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:paddingLeft="5.0dip"
				android:layout_gravity="left|center_vertical"
				android:lineSpacingMultiplier="1.3" 
				android:text="@string/before_you"
				/>
		  	<TextView android:id="@+id/beforeYouReservation"
		  		android:textAppearance="?android:textAppearanceMedium" 
		  		android:textSize="10.0sp" 
		  		android:textColor="@color/deep_gray" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_gravity="left|center_vertical"
				android:lineSpacingMultiplier="1.3" 
				android:text="1"
				/>
	  	</LinearLayout>
	  	<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_weight="1">
		  	<TextView 
		  		android:textAppearance="?android:textAppearanceMedium" 
		  		android:textSize="10.0sp" 
		  		android:textColor="@color/deep_gray" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_gravity="left|center_vertical"
				android:lineSpacingMultiplier="1.3" 
				android:text="@string/current_number"
				/>
		  	<TextView android:id="@+id/currentNumberReservation"
		  		android:textAppearance="?android:textAppearanceMedium" 
		  		android:textSize="10.0sp" 
		  		android:textColor="@color/deep_gray" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_gravity="left|center_vertical"
				android:lineSpacingMultiplier="1.3" 
				android:text="1"
				/>
	  	</LinearLayout>
  	</LinearLayout>
</LinearLayout> 
